After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 795867 - bitwriter: Fix build error
bitwriter: Fix build error
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
git master
Other Windows
: Normal normal
: git master
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2018-05-07 01:51 UTC by Seungha Yang
Modified: 2018-05-07 06:48 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
bitwriter: Fix build error (909 bytes, patch)
2018-05-07 01:52 UTC, Seungha Yang
committed Details | Review

Description Seungha Yang 2018-05-07 01:51:12 UTC
Fix implicit-function-declaration warning for meemst and memcpy

gstbitwriter.h:166:3: error: implicit declaration of function ‘memset’
   memset (bitwriter->data + clear_pos, 0, (new_bit_size >> 3) - clear_pos);
   ^
Comment 1 Seungha Yang 2018-05-07 01:52:21 UTC
Created attachment 371764 [details] [review]
bitwriter: Fix build error
Comment 2 Víctor Manuel Jáquez Leal 2018-05-07 06:48:39 UTC
Attachment 371764 [details] pushed as 69ddcc1 - bitwriter: Fix build error